[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/spr_wrath_sword/spr_wrath_sword.png" type="Texture" id=1]
[ext_resource path="res://entities/entity_wrath_sword/entity_wrath_sword.gd" type="Script" id=2]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.99125
height = 20.4502

[sub_resource type="Animation" id=2]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 0.574349, 2.63902, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col_wrath_sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 0.189465, 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col_wrath_sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "s1_atk_2"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 0.5, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("col_wrath_sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("spr_wrath_sword:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 25.3897

[node name="entity_wrath_sword" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="node_boss_attacks" parent="." instance=ExtResource( 3 )]

[node name="spr_wrath_sword" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="col_wrath_sword" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="animation_wrath_sword" type="AnimationPlayer" parent="."]
anims/floating_sword = SubResource( 2 )
anims/s1_atk_1 = SubResource( 3 )
anims/s1_atk_2 = SubResource( 4 )

[node name="animation_overlay_wrath_sword" type="AnimationPlayer" parent="."]
anims/damaged = SubResource( 5 )

[node name="timer_stage_one" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="timer_stage_two" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="timer_stage_three" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="area_detect_player" type="Area2D" parent="."]
collision_layer = 0

[node name="col_area_detect_player" type="CollisionShape2D" parent="area_detect_player"]
shape = SubResource( 6 )
[connection signal="body_entered" from="area_detect_player" to="." method="_on_area_detect_player_body_entered"]
